<resources>
    <string name="app_name">GrabilityApp</string>
    <string name="title_activity_main">Playstore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion_de_la_aplicacion">Descripcion de la aplicacion</string>
    <string name="titulo_de_la_aplicacion">Titulo de la aplicacion</string>
    <string name="app_image">app image</string>
    <string name="costo_app">Gratis</string>
    <string name="nombre_artista">Nombre del artista</string>
</resources>
