<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="53dp"
                android:layout_height="53dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/app_image"
                android:scaleType="centerCrop"
                android:cropToPadding="true"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_image" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nombre"
                android:text="@string/titulo_de_la_aplicacion"
                android:maxLength="30"
                android:ellipsize="end"
                android:lines="1"
                android:scrollHorizontally="true"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/app_image"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:text="@string/descripcion_de_la_aplicacion"
                android:layout_height="wrap_content"
                android:id="@+id/tv_descripcion"
                android:maxLength="200"
                android:ellipsize="end"
                android:lines="4"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/app_image"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
                android:layout_width="240dp" />

            <TextView
                android:text="@string/costo_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_precio"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="8dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>