<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/iv_imagen"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />

                <TextView
                    android:text="@string/titulo_de_la_aplicacion"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_nombre"
                    android:layout_marginTop="56dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
                    android:layout_width="wrap_content" />

                <TextView
                    android:text="@string/descripcion_de_la_aplicacion"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_titulo_descripcion"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_artista" />

                <TextView
                    android:text="@string/costo_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_precio"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="56dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:text="@string/titulo_de_la_aplicacion"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_titulo"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
                    android:layout_marginStart="8dp"
                    app:layout_constraintLeft_toRightOf="@+id/iv_imagen"
                    android:layout_marginLeft="8dp" />

                <TextView
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_artista"
                    android:text="@string/nombre_artista"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toRightOf="@+id/iv_imagen"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

                <TextView
                    android:text="@string/descripcion_de_la_aplicacion"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_descripcion"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_titulo_descripcion"
                    android:layout_width="320dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_close_black_24dp"
                    android:id="@+id/iv_close"
                    android:tint="#bdbdbd"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="16dp" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>
</LinearLayout>